--- a/style/style.css
+++ b/style/style.css
@@ -19,13 +19,19 @@ nav-title {
     font-size: 35px;
     color: black;
 
+
 }
 .section-discription{
     font-size: 18px;
     color: #757575;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 .sec-bg{
     background-color: #FFF8F3;
+}
+.text-center{
+    text-align: center;
 }
 main{
     max-width: 1140px;
@@ -113,4 +119,19 @@ nav ul li a {
 .banner-content{
     max-width: 580px;
 
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+
+}
+.skill{
+    padding: 30px;
+    margin: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.066);
 }
